<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#312C3C"
    tools:context=".view.Register">

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/movie_finder"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textColor="#DBDBDB"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="42dp" />


    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:drawableEnd="@drawable/ic_email"
        android:textColorHint="#8BE7E7E7"
        android:textColor="#E7E7E7"
        android:inputType="textEmailAddress"
        android:layout_marginBottom="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/passwordEditText"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:drawableEnd="@drawable/ic_badge"
        android:textColorHint="#8CE7E7E7"
        android:textColor="#E7E7E7"
        android:inputType="textPassword"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toBottomOf="@id/emailEditText"
        app:layout_constraintBottom_toTopOf="@+id/confirmPassEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.8" />

    <EditText
        android:id="@+id/confirmPassEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/retype_password"
        android:drawableEnd="@drawable/ic_badge"
        android:textColorHint="#8CE7E7E7"
        android:textColor="#E7E7E7"
        android:inputType="textPassword"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toBottomOf="@id/passwordEditText"
        app:layout_constraintBottom_toTopOf="@+id/regBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.8" />

    <Button
        android:id="@+id/regBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/click_to_register"
        android:drawableEnd="@drawable/ic_register"
        android:background="@drawable/button_background"
        android:backgroundTint="#673AB7"
        android:textColor="#E7E7E7"
        android:paddingHorizontal="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintTop_toBottomOf="@id/confirmPassEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/cancelBtn"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/cancelBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#D5E7E7E7"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/regBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
